--- a/table.html
+++ b/table.html
@@ -120,7 +120,7 @@
 </header>
 <main role="main" property="mainContentOfPage" class="container">
 
-<table class="wb-tables table table-striped table-hover nowrap order-column" data-wb-tables='{ "ordering" : true, "scrollX": true }'>
+<table class="wb-tables table table-striped table-hover nowrap order-column compact" data-wb-tables='{ "ordering" : true, "scrollX": true }'>
 <thead>
 <tr>
 	<th>TPC ID</th>
@@ -146,7 +146,7 @@
 </tr>	
 
 <tr>
-	<td>558</td>
+	<td>559</td>
 	<td>Change my address</td>
 	<td>ITE</td>
 	<td>Account Maintenance</td>
@@ -157,7 +157,7 @@
 </tr>	
 
 <tr>
-	<td>558</td>
+	<td>560</td>
 	<td>Change my address</td>
 	<td>ITE</td>
 	<td>Account Maintenance</td>
@@ -168,7 +168,7 @@
 </tr>	
 
 <tr>
-	<td>558</td>
+	<td>561</td>
 	<td>Change my address</td>
 	<td>ITE</td>
 	<td>Account Maintenance</td>
