--- a/crb-how-much.html
+++ b/crb-how-much.html
@@ -831,14 +831,14 @@ li.checkbox label {
                   <section id="checkboxes" class="hidden">
                     <p class="checkbox-label mrgn-bttm-0"><strong>How many CRB periods have you already applied for?</strong></p>
                     <p class="small text-muted mrgn-tp-0">Select the CRB periods you applied for</p>
-                    <div class="panel panel-default">
+                    <div class="">
                       <ul class="checkbox-lg">
                         <li class="checkbox" id="all">
                           <input type="checkbox" id="c0" class="all-checkbox cb-dmm" onChange="toggleAll()">
                           <label for="c0">Select all periods to date</label>
                         </li>
                       </ul>
-                      <section class="brdr-tp mrgn-tp-0">
+                      <section class="mrgn-tp-0">
                         <ul class="checkbox-lg checkbox-zebra">
                           <li class="checkbox" id="p1">
                             <input type="checkbox" id="c1" class="action-checkbox cb-dmm b422">
