--- a/sdz/sdz-4.html
+++ b/sdz/sdz-4.html
@@ -32,7 +32,7 @@
 <!-- CustomCSSStart -->
 <link rel="stylesheet" href="https://careers-carrieres.cra-arc.gc.ca/ebci/wet/v4.0.28.1/cra-arc/apps.css" />
 <link rel="stylesheet" href="https://careers-carrieres.cra-arc.gc.ca/gol-ged/wcis/iss-sdi/pub/css/custom.css" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 <!-- CustomCSSEnd -->
 
 </head>
@@ -100,7 +100,7 @@
                     </div>
                     <div id="login-logout-div" class="pull-right mrgn-rght-md">
                          
-                            <!--a id="loginButton" href="#" class="btn btn-default iss-button login-logout-button btn-sm" role="button">Login / Register</a-->
+                            <a id="loginButton" href="#" class="btn btn-default iss-button login-logout-button btn-sm" role="button">Sign out</a>
                         
                     </div>                
                 </div>
@@ -110,6 +110,47 @@
 <span data-trgt="mb-pnl" class="wb-menu hide"></span>
 
 <style>
+
+input[type="file"] {
+    display: none;
+}
+.custom-file-upload {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.4375;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border-style: outset;
+    height: auto;
+    min-height: 36px;
+    min-width: 36px;
+    white-space: normal;
+    color: #335075;
+    background-color: #eaebed;
+    border-color: #dcdee1;
+}
+
+textarea {
+  resize: none;
+}
+
+textarea-width {
+    width: 800px;
+}
+
 /*h1 underline re-design*/ h1#wb-cont {
 border-bottom: none;
 }
@@ -119,51 +160,6 @@ h1#wb-cont::after {
   width: 70px;
   padding-bottom: 8px;
   border-bottom: .18em solid #af3c43;
-}/*Section menu steps design*/
-ul.gcnav-steps {
-  list-style: none;
-  padding-left: 0.57em;
-  position: relative;
-}
-li ul.gcnav-steps {
-  margin-top: 20px;
-  padding-left: 0.55em;
-}
-ul.gcnav-steps>li {
-  border-left: 4px solid #26374a;
-  padding: 0px 20px 30px 1em;
-}
-ul.gcnav-steps.noline>li {
-  border-left: 4px solid transparent;
-}
-ul.gcnav-steps>li::first-line {
-  line-height: 1!important;
-}
-ul.gcnav-steps>li:last-child, ul.gcnav-steps>li.gcnav-steps-end {
-  border-left: 4px solid transparent;
-}
-li ul.gcnav-steps>li:last-child {
-  padding-bottom: 0px;
-}
-ul.gcnav-steps>li>:first-child::before {
-  border-radius: 50%;
-  border: 3px solid #26374a;
-  background-color: #fff;
-  position: absolute;
-  left: 0.05em;
-  content: "";
-  width: 1.2em;
-  height: 1.2em;
-  transition: width 0.2s, height 0.2s, left 0.2s, margin-top 0.2s;
-}
-ul.gcnav-steps>li.active>:first-child::before {
-  background-color: #26374a;
-}
-ul.gcnav-steps>li>a[href]:hover::before, .gcnav-steps>li>a[href]:focus::before {
-  width: 1.4em;
-  height: 1.4em;
-  left: -0.05em;
-  margin-top: -0.1em;
 }/*Section menu mobile*/
 .gcnav h1#wb-cont-parent {
   border-bottom-width: 0px;
@@ -214,13 +210,7 @@ ul.gcnav-steps>li>a[href]:hover::before, .gcnav-steps>li>a[href]:focus::before {
 .gcnav-section h1#wb-cont {
   margin-top: 0px;
 }
-.gcnav-menu h1#wb-cont-parent, .gcnav-menu ul.gcnav-menu-pager, .gcnav-section {
-  width: 66.66%;
-}
-.gcnav-menu nav, .gcnav aside.gcnav-side {
-  width: 33.33%;
-  float: right;
-}
+
 .gcnav-section {
   display: inline-block;
 }
@@ -249,44 +239,6 @@ ul.gcnav-steps>li>a[href]:hover::before, .gcnav-steps>li>a[href]:focus::before {
   border-top: 0px;
   border-right: 0px;
 }
-.gcnav ul.gcnav-steps > li:last-child {
-  border-left: 4px solid transparent;
-  border-bottom: 0px;
-}/*Section menu nav buttons*/
-
-ul.gcnav-menu-pager>li>a:hover, ul.gcnav-menu-pager>li>a:focus, ul.gcnav-menu-pager>li>a:visited {
-  display: inline-block;
-  color: #fff;
-  text-decoration: none;
-  padding: 5px;
-}
-ul.gcnav-menu-pager>li>a {
-  background-color: #26374a;
-}
-ul.gcnav-menu-pager>li>a:hover {
-  background-color: #444;
-}
-ul.gcnav-menu-pager>li>a:not(:focus) {
-  clip: rect(1px,1px,1px,1px);
-  height: 1px;
-  margin: 0;
-  overflow: hidden;
-  position: absolute;
-  width: 1px;
-}
-ul.gcnav-menu-pager>li>a:focus {
-  position: relative;
-}
-ul.gcnav-menu-pager {
-  display: flex;
-  margin-bottom: 0;
-  list-style: none;
-  padding-left: 0;
-}
-}
-@-moz-document url-prefix() {
-ul.gc-navseq>li>:first-child::before {
-margin-left: -2.0em;
 }
 </style>    
 
@@ -313,6 +265,67 @@ margin-left: -2.0em;
 
 <h2 class="h3">1. Download files</h2>
 <p>Before you upload your files, download the 3 files available for your records.</p>
+
+<details open="open">
+<summary>3 files available for download</summary>
+
+<table class="table table-simple mrgn-bttm-0">
+<thead>
+    <tr>
+        <th>File name</th>
+        <th>Upload date</th>
+        <th>Size</th>
+    </tr>    
+</thead>
+<tbody>
+    <tr>
+        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="#">Notice of Assessment</a></td>
+        <td>01/01/2021</td>
+        <td>21 Gb</td>
+    </tr>
+    <tr>
+        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="#">Form for Appeals</a></td>
+        <td>01/01/2021</td>
+        <td>21 Gb</td>
+    </tr>
+    <tr>
+        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="#">Pre-authorized Debit Confirmation</a></td>
+        <td>01/01/2021</td>
+        <td>21 Gb</td>
+    </tr>        
+</tbody>
+</table>
+
+</details>    
+
+<button class="btn btn-default mrgn-rght-sm">Download all files</button>
+
+
+<h2 class="h3">2. Upload files</h2>
+
+<p>Please submit all receipts related to your business from 2020.</p>
+<p>You can upload up to 10 files. The maximum size of individual files is 4GB. <a href="#">View acceptable file types</a></p>
+ 
+<div class="brdr-rds-0 brdr-lft brdr-rght brdr-tp brdr-bttm" style="border-style: dashed;">
+<p class="text-center mrgn-tp-md"><img src="upload.svg"></p>
+<p class="text-center">
+<label for="file-upload" class="custom-file-upload">
+Add files
+</label>
+<input id="file" type="file" name="file" multiple onchange="javascript:updateList()" />
+</p>
+<p class="text-center mrgn-bttm-md">or drop the files to upload</p>
+</div>    
+
+<div id="fileList"></div>
+<br>
+
+<form>
+  <label for="addnfo">Use the text box below to share any additional information with CRA</label>
+  <textarea class="form-control mrgn-bttm-sm" rows="2" placeholder="Type details" style="min-width: 100%"></textarea>
+
+  <button type="submit" class="btn btn-info">Review and submit files</button>
+</form>
 
 <!-- Content ends -->
 
@@ -367,8 +380,18 @@ margin-left: -2.0em;
 <script src="https://careers-carrieres.cra-arc.gc.ca/ebci/wet/v4.0.28.1/GCWeb/js/theme.min.js"></script>
 
 <!-- CustomScriptsStart -->
+<script>
+  updateList = function() {
+  var input = document.getElementById('file');
+  var output = document.getElementById('fileList');
 
-  
+  output.innerHTML = '<ul>';
+  for (var i = 0; i < input.files.length; ++i) {
+    output.innerHTML += '<li>' + input.files.item(i).name + '</li>';
+  }
+  output.innerHTML += '</ul>';
+}
+</script>  
 <!-- CustomScriptsEnd -->
 
 </body>
