--- a/sdz/sdz-4.html
+++ b/sdz/sdz-4.html
@@ -111,6 +111,19 @@
 
 <style>
 
+main {
+    font-size: 20px;
+    line-height: 1.65em;
+}
+
+body {
+    font-family: "Noto Sans",sans-serif;
+    font-size: 16px;
+    line-height: 1.4375;
+    color: #333;
+    background-color: #fff;
+}
+
 input[type="file"] {
     display: none;
 }
