--- a/sdz/sdz-2.html
+++ b/sdz/sdz-2.html
@@ -215,7 +215,7 @@ input[type="file"] {
             </div>
         </div>
         
-        <div id="brand-container-cra">
+        <div id="brand-container-cra" style="background: black;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8" id="brand-text-cra">
@@ -246,7 +246,13 @@ input[type="file"] {
 <p>We need to confirm your identity. We will send you a one-time passcode to the phone number ending in 5678.</p>
 <p>How do you want us to contact you?</p>
 
-<button class="btn btn-default btn-lg mrgn-rght-sm">Text me</button> <button class="btn btn-default btn-lg mrgn-rght-sm">Call me</button> <button class="btn btn-default btn-lg">Exit</button>
+<div class="wb-frmvld">
+<form action="https://fomag.github.io/temp/sdz/sdz-3.html" method="get" id="sdz1">
+
+    <button class="btn btn-default btn-lg mrgn-rght-sm">Text me</button> <button class="btn btn-default btn-lg mrgn-rght-sm">Call me</button> <button class="btn btn-default btn-lg">Exit</button>
+
+</form>
+</div>
 
 <!-- Content ends -->
 
