--- a/sdz/sdz-3.html
+++ b/sdz/sdz-3.html
@@ -215,7 +215,7 @@ input[type="file"] {
             </div>
         </div>
         
-        <div id="brand-container-cra">
+        <div id="brand-container-cra" style="background: black;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8" id="brand-text-cra">
