--- a/sdz/sdz-5.html
+++ b/sdz/sdz-5.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         
-        <div id="brand-container-cra">
+        <div id="brand-container-cra" style="background: black;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8" id="brand-text-cra">
@@ -174,7 +174,7 @@ h1#wb-cont::after {
   padding: 0px 20px 10px 12px;
   background-color: #fff;
   display: inline-block;
-  font-size: 1.3em;
+  font-size: 1.1em;
   color: #555;
   margin-top: -19px;
   float: left;
