--- a/sdz/sdz-6.html
+++ b/sdz/sdz-6.html
@@ -115,6 +115,47 @@
   .alert-danger::before {
     color: #d3080c;
     content: ""; }
+
+main {
+    font-size: 20px;
+    line-height: 1.65em;
+}
+
+body {
+    font-family: "Noto Sans",sans-serif;
+    font-size: 16px;
+    line-height: 1.4375;
+    color: #333;
+    background-color: #fff;
+}
+
+input[type="file"] {
+    display: none;
+}
+.custom-file-upload {
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.4375;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border-style: outset;
+    height: auto;
+    min-height: 36px;
+    min-width: 36px;
+    white-space: normal;
+    color: #335075;
+    background-color: #eaebed;
+    border-color: #dcdee1;
+}   
 </style>
 </head>
 
@@ -173,7 +214,7 @@
             </div>
         </div>
         
-        <div id="brand-container-cra">
+        <div id="brand-container-cra" style="background: black;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8" id="brand-text-cra">
