--- a/sdz/sdz-4-1.html
+++ b/sdz/sdz-4-1.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         
-        <div id="brand-container-cra">
+        <div id="brand-container-cra" style="background: black;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8" id="brand-text-cra">
@@ -175,7 +175,7 @@ h1#wb-cont::after {
   padding: 0px 20px 10px 12px;
   background-color: #fff;
   display: inline-block;
-  font-size: 1.3em;
+  font-size: 1.1em;
   color: #555;
   margin-top: -19px;
   float: left;
@@ -357,7 +357,7 @@ Add files
   <label for="addnfo">Use the text box below to share any additional information with CRA</label>
   <textarea class="form-control mrgn-bttm-sm" rows="2" placeholder="Type details" style="min-width: 100%"></textarea>
 
-  <button type="submit" class="btn btn-info">Review and submit files</button>
+  <button type="submit" class="btn btn-info btn-lg">Review and submit files</button>
 </form>
 
 <!-- Content ends -->
