--- a/sdz/sdz-4.html
+++ b/sdz/sdz-4.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         
-        <div id="brand-container-cra">
+        <div id="brand-container-cra" style="background: black;">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8" id="brand-text-cra">
@@ -175,7 +175,7 @@ h1#wb-cont::after {
   padding: 0px 20px 10px 12px;
   background-color: #fff;
   display: inline-block;
-  font-size: 1.3em;
+  font-size: 1.1em;
   color: #555;
   margin-top: -19px;
   float: left;
@@ -242,7 +242,7 @@ h1#wb-cont::after {
   margin-top: 0px;
 }
 .gcnav-menu #gcnav-menu-header {
-  font-size: 1.2em;
+  font-size: 1em;
 }
 .gcnav-menu {
   border-top: 0px;
@@ -307,7 +307,7 @@ h1#wb-cont::after {
 
 </details>    
 
-<button class="btn btn-default mrgn-rght-sm">Download all files</button>
+<button class="btn btn-default btn-lg mrgn-rght-sm">Download all files</button>
 
 
 <h2 class="h3">2. Upload files</h2>
@@ -329,11 +329,11 @@ Add files
 <div id="fileList"></div>
 <br>
 
-<form>
+<form action="https://fomag.github.io/temp/sdz/sdz-4-1.html" method="get" id="sdz1">
   <label for="addnfo">Use the text box below to share any additional information with CRA</label>
-  <textarea class="form-control mrgn-bttm-sm" rows="2" placeholder="Type details" style="min-width: 100%"></textarea>
+  <textarea class="form-control mrgn-bttm-sm" rows="2" placeholder="Type details" style="min-width: 100%" id="an1" name="an1" onkeyup="myFunction()"></textarea>
 
-  <button type="submit" class="btn btn-info">Review and submit files</button>
+  <button type="submit" class="btn btn-info btn-lg" id="enter">Review and submit files</button>
 </form>
 
 <!-- Content ends -->
@@ -400,6 +400,20 @@ Add files
   }
   output.innerHTML += '</ul>';
 }
+</script>  
+<script>
+document.addEventListener("DOMContentLoaded", function(event) {
+        document.getElementById('enter').disabled = "true";
+    });
+    function myFunction() {
+        var an1 = document.getElementById('an1').value;
+        console.log(an1);
+        if (an1 === "") {
+            document.getElementById('enter').disabled = true;
+        } else {
+                document.getElementById('enter').disabled = false;
+        }
+    }
 </script>  
 <!-- CustomScriptsEnd -->
 
