--- a/sdz/sdz-4-1.html
+++ b/sdz/sdz-4-1.html
@@ -353,7 +353,7 @@ Add files
 </div>
 <br>
 
-<form>
+<form action="https://fomag.github.io/temp/sdz/sdz-5.html" method="get" id="sdz4">
   <label for="addnfo">Use the text box below to share any additional information with CRA</label>
   <textarea class="form-control mrgn-bttm-sm" rows="2" placeholder="Type details" style="min-width: 100%"></textarea>
 
