--- a/sdz/sdz-4.html
+++ b/sdz/sdz-4.html
@@ -318,11 +318,13 @@ h1#wb-cont::after {
 <div class="brdr-rds-0 brdr-lft brdr-rght brdr-tp brdr-bttm" style="border-style: dashed;">
 <p class="text-center mrgn-tp-md"><img src="upload.svg"></p>
 <p class="text-center">
-<label for="file-upload" class="custom-file-upload">
+<!--label for="file-upload" class="custom-file-upload">
 Add files
 </label>
+
 <input id="file-upload" type="file" name="file"  />
-</p>
+</p-->
+<a href="https://fomag.github.io/temp/sdz/sdz-4-1.html" class="btn btn-default">Add files</a>
 <p class="text-center mrgn-bttm-md">or drop the files to upload</p>
 </div>    
 
