--- a/sdz/sdz-5.html
+++ b/sdz/sdz-5.html
@@ -371,13 +371,13 @@ h1#wb-cont::after {
 </tbody>
 </table>
 
-<form class="mrgn-tp-md">
+<form class="mrgn-tp-md" action="https://fomag.github.io/temp/sdz/sdz-6.html" method="get" id="sdz8">
 
-<label for="input1" class="container-checks">
-      <input id="input1" class="btnCheck" type="checkbox">
+<label for="check" class="container-checks">
+      <input id="check" class="btnCheck" type="checkbox">
       <span class="text-danger"><strong>*</strong></span> I verify that I have downloaded available files and uploaded all required files. <span class="text-danger">(required)</span><span class="checkmark"></span> </label>
 
-<button class="btn btn-primary btn-lg mrgn-rght-sm">Submit and close drop zone</button> <button class="btn btn-default btn-lg mrgn-rght-sm">Go back</button>
+<button class="btn btn-info btn-lg mrgn-rght-sm" id="btncheck">Submit and close drop zone</button> <button class="btn btn-default btn-lg mrgn-rght-sm">Go back</button>
 </form>
 <!-- Content ends -->
 
@@ -433,16 +433,9 @@ h1#wb-cont::after {
 
 <!-- CustomScriptsStart -->
 <script>
-  updateList = function() {
-  var input = document.getElementById('file-upload');
-  var output = document.getElementById('fileList');
-
-  output.innerHTML = '<ul>';
-  for (var i = 0; i < input.files.length; ++i) {
-    output.innerHTML += '<li>' + input.files.item(i).name + '</li>';
-  }
-  output.innerHTML += '</ul>';
-}
+$('#check').change(function () {
+    $('#btncheck').prop("disabled", !this.checked);
+}).change()
 </script>  
 <!-- CustomScriptsEnd -->
 
