--- a/sdz/sdz-4.html
+++ b/sdz/sdz-4.html
@@ -288,26 +288,26 @@ h1#wb-cont::after {
 </thead>
 <tbody>
     <tr>
-        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="#">Notice of Assessment</a></td>
+        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="notice-of-assessment.pdf" download>Notice of Assessment</a></td>
         <td>01/01/2021</td>
-        <td>2 Gb</td>
+        <td>86 Kb</td>
     </tr>
     <tr>
-        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="#">Form for Appeals</a></td>
+        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="form-for-appeals.pdf" download>Form for Appeals</a></td>
         <td>01/01/2021</td>
-        <td>2 Gb</td>
+        <td>78 Kb</td>
     </tr>
     <tr>
-        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="#">Pre-authorized Debit Confirmation</a></td>
+        <td><img src="download.svg" style="padding-bottom: 3px;"> <a href="pre-authorized-debit-confirmation.pdf" download>Pre-authorized Debit Confirmation</a></td>
         <td>01/01/2021</td>
-        <td>2 Gb</td>
+        <td>98 Kb</td>
     </tr>        
 </tbody>
 </table>
 
 </details>    
 
-<button class="btn btn-default btn-lg mrgn-rght-sm">Download all files</button>
+<a class="btn btn-default btn-lg mrgn-rght-sm" href="all-files.zip" download>Download all files</a>
 
 
 <h2 class="h3">2. Upload files</h2>
