--- a/sdz/sdz-1.html
+++ b/sdz/sdz-1.html
@@ -261,7 +261,7 @@ input[type="file"] {
             <input class="form-control letter" id="an4" name="an4" type="text" size="4" maxlength="4" pattern="2579" data-msg="Custom msg" required="required" onkeyup="myFunction()" />
         </div-->
         <div class="form-inline">
-            <input class="form-control" id="an4" name="an4" type="text" pattern="[a-zA-Z]{4}[0-9]{4}[a-zA-Z]{4}[0-9]{4}" data-msg="4 letters followed by 4 numbers followed by 4 letters followed by 4 numbers ex: abcd-1234-efgh-5678" maxlength="16" required="required" onKeyDown="CountLeft(this.form.text,16);" onKeyUp="CountLeft(this.form.text,16);" />
+            <input class="form-control" id="an4" name="an4" type="text" pattern="[aA][cC][gG][hH]1460[tT][uU][jJ][hH]2579" data-msg="Please enter a code in the following format: abcd1234efgh5678" maxlength="16" required="required" onKeyDown="CountLeft(this.form.text,16);" onKeyUp="CountLeft(this.form.text,16);" />
         </div>
         <button type="submit" class="btn btn-info btn-lg mrgn-rght-sm" id="enter" disabled="disabled">Enter</button>
         </div>
