--- a/overlay3.html
+++ b/overlay3.html
@@ -55,9 +55,17 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
 
-<h1 property="name" id="wb-cont">Test</h1>
+<h1 property="name" id="wb-cont">Preparing income tax returns: before, during and after</h1>
 <div class="row">
 <div class="col-md-8">
+
+<h2>On this page</h2>
+<ul>
+    <li><a href="#h1">Before preparing income tax returns</a></li>
+    <li><a href="#h2">Preparing income tax returns</a></li>
+    <li><a href="#h3">After preparing the income tax return</a></li>
+</ul>
+</section>  
 
 <h2 id="h1">Before preparing income tax returns</h2>
 <p>There are several steps for preparing tax returns. To ensure you have everything you need, we recommend you follow these guidelines:&nbsp;</p>
