--- a/overlay3.html
+++ b/overlay3.html
@@ -41,10 +41,10 @@
             		title: "Canada.ca",
             		href: "https://www.canada.ca/en.html"
             	},{
-            		title: "abc",
+            		title: "Learning what goes on a tax return",
             		href: ""
             	},{
-            		title: "123",
+            		title: "Types of income and deductions",
             		href: ""
             	}
             	],
@@ -55,7 +55,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
 
-<h1 property="name" id="wb-cont">Preparing income tax returns: before, during and after</h1>
+<h1 property="name" id="wb-cont">Types of income and deductions</h1>
 <div class="row">
 <div class="col-md-8">
 
@@ -936,9 +936,13 @@ Please refer to <a href="/en/revenue-agency/services/tax/individuals/community-v
 <div class="col-md-4 mrgn-tp-lg">
 
 <div class="list-group">
-  <a href="#" class="list-group-item">Section A</a>
-  <a href="#" class="list-group-item active">Active section</a>
-  <a href="#" class="list-group-item">Section C</a>
+  <a href="#" class="list-group-item">Breaking down a tax return</a>
+  <a href="#" class="list-group-item active">Types of income and deductions</a>
+  <a href="#" class="list-group-item">Types of non-refundable tax credits</a>
+	<a href="#" class="list-group-item">Types of refundable tax credits</a>
+	<a href="#" class="list-group-item">Paid benefits and credits</a>
+	<a href="#" class="list-group-item">Taxes for Indigenous peoples</a>
+	<a href="#" class="list-group-item">Taxes for newcomers</a>
 </div>
 
 </div>
